--- a/Close Friend/NotificationCell.xib
+++ b/Close Friend/NotificationCell.xib
@@ -19,56 +19,45 @@
                 <rect key="frame" x="0.0" y="0.0" width="344" height="102.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="iOV-sf-SEy">
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="iOV-sf-SEy">
                         <rect key="frame" x="112.5" y="10" width="221.5" height="87.5"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Yv6-RX-2nP">
-                                <rect key="frame" x="0.0" y="0.0" width="221.5" height="48"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First and Last Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgT-gu-Fft" customClass="CopyableUILabel" customModule="Close_Friend" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="221.5" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Job Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnl-UW-isf">
-                                        <rect key="frame" x="0.0" y="24" width="221.5" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First and Last Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgT-gu-Fft" customClass="CopyableUILabel" customModule="Close_Friend" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="221.5" height="41.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.1764705882352941" green="0.19215686274509802" blue="0.25882352941176467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="MRg-fM-Bsq">
-                                <rect key="frame" x="0.0" y="53.5" width="221.5" height="34"/>
+                                <rect key="frame" x="0.0" y="46.5" width="221.5" height="41"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afA-nK-Kg6">
-                                        <rect key="frame" x="0.0" y="0.0" width="70.5" height="34"/>
-                                        <color key="backgroundColor" red="0.2784313725" green="0.36078431370000003" blue="0.46666666670000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="70.5" height="41"/>
+                                        <color key="backgroundColor" red="0.93725490196078431" green="0.51372549019607838" blue="0.32941176470588235" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Call"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vox-MB-0xD">
-                                        <rect key="frame" x="75.5" y="0.0" width="70.5" height="34"/>
-                                        <color key="backgroundColor" red="0.2784313725" green="0.36078431370000003" blue="0.46666666670000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <rect key="frame" x="75.5" y="0.0" width="70.5" height="41"/>
+                                        <color key="backgroundColor" red="0.93725490196078431" green="0.51372549019607838" blue="0.32941176470588235" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Text"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xg2-Ed-IF5">
-                                        <rect key="frame" x="151" y="0.0" width="70.5" height="34"/>
-                                        <color key="backgroundColor" red="0.2784313725" green="0.36078431370000003" blue="0.46666666670000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <rect key="frame" x="151" y="0.0" width="70.5" height="41"/>
+                                        <color key="backgroundColor" red="0.93725490196078431" green="0.51372549019607838" blue="0.32941176470588235" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Email"/>
                                     </button>
                                 </subviews>
                             </stackView>
                         </subviews>
                     </stackView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UQm-IR-7c0">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UQm-IR-7c0">
                         <rect key="frame" x="10" y="5" width="97.5" height="92.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="UQm-IR-7c0" secondAttribute="height" multiplier="1:1" constant="5" id="7DQ-81-xi7"/>
                         </constraints>
                     </imageView>
                 </subviews>
-                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" red="0.74901960779999999" green="0.75294117650000003" blue="0.75294117650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="UQm-IR-7c0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="1iI-CO-knC"/>
                     <constraint firstItem="iOV-sf-SEy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="6wc-Iv-Is3"/>
@@ -82,7 +71,6 @@
             <connections>
                 <outlet property="callBtn" destination="afA-nK-Kg6" id="zyd-EA-kWV"/>
                 <outlet property="emailBtn" destination="Xg2-Ed-IF5" id="GZ9-YJ-0Bo"/>
-                <outlet property="job" destination="fnl-UW-isf" id="1XP-d9-dKX"/>
                 <outlet property="name" destination="rgT-gu-Fft" id="pvj-uD-UeS"/>
                 <outlet property="pic" destination="UQm-IR-7c0" id="ZW6-d7-Uwh"/>
                 <outlet property="textBtn" destination="Vox-MB-0xD" id="pLt-4a-iNh"/>
